--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.xwb filter=lfs diff=lfs merge=lfs -text
 *.xgs filter=lfs diff=lfs merge=lfs -text
 *.xsb filter=lfs diff=lfs merge=lfs -text
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
